# novels2llm

./: .env.example  .gitignore  CLAUDE.md  index.html  pipeline_overview.html  pipeline_visual.html  pyproject.toml
docs/: PIPELINE_DETAIL.md
prompts/: character_extraction.txt  dialogue_extraction.txt  event_dialogue_extraction.txt  relationship_extraction.txt  scene_narrative_extraction.txt  timeline_extraction.txt  world_setting.txt
src/novels2llm/: __init__.py  cli.py  config.py
src/novels2llm/chunking/: chapter_splitter.py  smart_chunker.py
src/novels2llm/coreference/: alias_resolver.py  entity_merger.py
src/novels2llm/extractors/: base.py  character_extractor.py  dialogue_extractor.py  event_extractor.py  relationship_extractor.py  scene_extractor.py  world_extractor.py
src/novels2llm/graph/: relationship_graph.py  timeline_graph.py
src/novels2llm/models/: entities.py  output.py  relationships.py  scene.py
src/novels2llm/pipeline/: stage1_preprocess.py  stage2_nlp.py  stage3_llm_extract.py  stage7_export.py
tests/: debug_dialogue.py  debug_extraction.py  full_extraction_test.py  full_extraction_v2.py  save_extraction_results.py  test_extraction_small.py  test_pipeline.py
