[project]
name = "novels2llm"
version = "0.1.0"
description = "Novel analysis pipeline for role-playing game data extraction"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "jieba>=0.42.1",
    "hanlp>=2.1.0",
    "pydantic>=2.0.0",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
novels2llm = "novels2llm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/novels2llm"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
